--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --watch --mode development",
     "prod": "webpack --mode production",
-    "build": "webpack --config webpack.config.js --debug --progress && rm ./dist/tachyons.js",
-    "browsersync": "node bin/server.js"
+    "build": "webpack --config webpack.config.js --debug --progress",
+    "browsersync": "node bin/server.js",
+    "clean": "rm -r dist/*"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,9 @@
   "devDependencies": {
     "browser-sync": "^2.24.6",
     "bs-fullscreen-message": "^1.1.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
