--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
-    "tachyons": "^4.11.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.14.4"
   }
 }
