--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --watch --mode development",
     "prod": "webpack --mode production",
-    "build": "webpack --config webpack.config.js --debug --progress",
+    "build": "webpack --config webpack.config.js --mode=production",
     "browsersync": "node bin/server.js",
     "clean": "rm -r dist/*"
   },
