--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.1.0",
-    "browser-sync": "^2.27.10",
+    "browser-sync": "^2.29.1",
     "bs-fullscreen-message": "^1.1.0",
     "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^6.7.1",
+    "css-loader": "^3.6.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^7.0.3",
-    "postcss-loader": "^7.0.1",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "pug-html-loader": "^1.1.5",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.4.1",
     "style-loader": "^0.22.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
-    "bootstrap": ">=4.3.1",
-    "jquery": "^3.5.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.0",
     "popper.js": "^1.14.4"
   }
 }
